--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-native-gesture-handler": "^2.2.0",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
+    "react-native-select-dropdown": "^1.8.0",
+    "react-native-toast-message": "^2.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
