--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
+    "@rpldy/native-uploady": "^0.17.5",
     "axios": "^0.26.0",
     "react": "17.0.2",
     "react-native": "0.67.3",
+    "react-native-document-picker": "^8.0.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
     "react-native-select-dropdown": "^1.8.0",
+    "react-native-select-multiple": "^2.1.0",
     "react-native-toast-message": "^2.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
