--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-document-picker": "^8.0.0",
     "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-image-picker": "^4.7.3",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-safe-area-context": "^4.0.1",
