--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^5.1.0",
     "@react-native-picker/picker": "^2.3.1",
     "@react-navigation/bottom-tabs": "^6.2.0",
@@ -36,7 +37,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
-    "redux-promise-middleware": "^6.1.2"
+    "redux-promise-middleware": "^6.1.2",
+    "rn-range-slider": "^2.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
