--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-image-picker": "^4.7.3",
     "react-native-modal-datetime-picker": "^13.0.1",
     "react-native-paper": "^4.11.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^4.0.1",
     "react-native-screens": "^3.12.0",
     "react-native-select-dropdown": "^1.8.0",
